# AirShifterRough

./: .gitignore  logs.txt  logs2.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  FOTA.c  Kconfig.projbuild  biz_logix.c  biz_logix.h  cert.pem  gatt_svr.c  idf_component.yml  main.c  mqtt.c  parser-old.c  parser-oldbitch1.c  parser.c  parser.h  security.c  wifi_manager.c  wifi_manager_old.c
main/certs/: cert.pem  key.pem
main/include/: mqtt.h  security.h  wifi_manager.h
